# slingpy

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: sklearn_estimator.ipynb  torch_model.ipynb
slingpy/: __init__.py
slingpy/apps/: __init__.py  abstract_base_application.py  app_paths.py
slingpy/apps/run_policies/: abstract_run_policy.py  composite_run_policy.py  cross_validation_run_policy.py  local_single_run_policy.py  slurm_single_run_policy.py
slingpy/data_access/: stratified_split.py
slingpy/data_access/data_sources/: abstract_data_source.py  composite_data_source.py  hdf5_data_source.py  hdf5_tools.py  torch_data_source.py
slingpy/data_access/merge_strategies/: __init__.py  abstract_merge_strategy.py  (+5 more)
slingpy/datasets/: __init__.py  abstract_hdf5_dataset.py  diabetes.py  iris.py
slingpy/evaluation/: __init__.py  evaluator.py
slingpy/losses/: __init__.py  torch_loss.py
slingpy/models/: __init__.py  abstract_base_model.py  pickleable_base_model.py  sklearn_model.py  tarfile_serialisation_base_model.py  torch_model.py
slingpy/schedulers/: abstract_scheduler.py  slurm_scheduler.py  system_scheduler.py
slingpy/transforms/: __init__.py  abstract_transform.py  scale_transform.py
slingpy/utils/: argument_dictionary.py  auto_argparse.py  download_streamed.py  gpu_tools.py  hashable_ndarray.py  init_seeds.py  iterative_stratification.py  logging.py  metric_dict_tools.py  nestable_pool.py  path_tools.py  plugin_tools.py  text_tools.py  to_categorical.py
(+15 files in other folders)
